# ComfyUI_BrotherPao

./: .gitignore  BaiduTranslate.py  DictionaryNodes.py  README.md  __init__.py  config.json  config_manager.py  dict_update_dynamic.js  pyproject.toml  requirements.txt  routes.py
.trae/rules/: project_rules.md
nodes/: BaiduTranslate.py  ConvertAny.py  DictionaryNodes.py  FramesEditor.py  ImageBatchList.py  ImageColorMatch.py  ImageCompare.py  ImageTileNodes.py  InpaintCropAndStitch.py  IsNoInput.py  QwenMultiangle.py  VisualImageEditor.py  VisualVideoEditor.py  YoloDetect.py  __init__.py  utils.py
web/: contextMenu.js  convert_any.js  dict_update_dynamic.js  frames_editor.js  frames_editor_translation.js  image_compare_node.js  inpaint_showcontrol.js  node_labels.js  qwen_multiangle_camera.js  shared_utils.js  visual_image_editor.js  visual_video_editor.js
