[project]
name = "comfyui_brotherpao"
description = "BrotherPao's Private Nodes"
version = "1.0.0"
license = "LICENSE"
dependencies = ["requests", "color-matcher", "scipy", "pillow", "ultralytics"]

[project.urls]
Repository = "https://github.com/zhangdapao-9523/ComfyUI_BrotherPao"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "zhangdapao9523"
DisplayName = "❤️‍🩹炮哥Nodes"
Icon = ""

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
